2001-08-19  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.cc: Enabled new render compare() method.  Time to hide.
	* objs/objs.cc: Fixed goof in new render compare() method.

2001-08-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.*: added Text_button.cc
	* Text_button.cc: added legal header, include config.h and Gump.h

2001-08-18  Ryan Nunn <triforce@merlin.net.au>
	* gumps\Text_button.*, gumps\Gump_ToggleButton.* : New Text_button and
	  Gump_ToggleTextButton button classes.
	* gumps/VideoOptions_gump.cc, data/*.*, Makefile.* : Made the scaler
	  button in the video options gump a Gump_ToggleTextButton. Removed the
	  old no longer required scaler shape. Updated Makefiles.
	* Misc files: Added Derek's new Super2xSaI scaler.
	* data/credits.txt : Added Super2xSaI to Derek's credits.
	* msvcstuff/Exult.rc : Added version table for MSVC compiled Exult.
	* objs/barge.cc : Barge_object::get_tile_footprint can't be inlined
	  like it is in MSVC.

2001-08-18  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/*.[cc|h]: Removed imbedded usecode table; which broke
	old-ucs script output; fixed that (kinda); added more correct jump
	table generation.
	* Docs/opcodes.txt: more documentation about format; slightly changed
	asm output format.

2001-08-18  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Experimental render-orderer 'compare()'.  Not enabled.

2001-08-17  Max Horn <max@quendi.de>
	* audio/pcb.*: fixed possible crash on MacOS, some clean up
	* audio/midi_drivers/mac_midi.*: compiles again on classic MacOS
	* fnames.h: changed for MacOS X again (set default value for EXULT_DATADIR)
	* gamewin.*: red plasma is now blue in SI
	* gumps/Modal_gump.h, Gamemenu_gump.cc, gump_utils.cc, Newfile_gump.cc:
	  fixed screen redrawal after loading a game.

2001-08-17  Ryan Nunn <triforce@merlin.net.au>
	* actors.cc : Swamp boots should now work in SI
	* cheat.cc : Namespace stuff